--- a/deploy/htdocs/version/src/inc/style/asset/_asset.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_asset.scss
@@ -8,6 +8,7 @@
 @import 'helper';
 @import 'pagination-number';
 @import 'scrollbar';
+@import 'link';
 
 @import 'infinite-carousel/infinite-carousel';
 
