Add quote-secondary Component Add Text component Add smallImageLeft Component

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -67,3 +67,6 @@
 @import "block/block-how-to-advertise";
 @import "block/block-image-carousel";
 @import "block/block-blog-post";
+@import "block/block-quote-secondary";
+@import "block/block-text";
+@import "block/block-small-image-left";
