--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -70,3 +70,5 @@
 @import "block/block-quote-secondary";
 @import "block/block-text";
 @import "block/block-small-image-left";
+@import "filter-menu";
+@import "block/block-filter-content";
