--- a/deploy/htdocs/version/src/inc/script/app/component/filter-menu/filter-menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/filter-menu/filter-menu.html
@@ -2,7 +2,7 @@
 
 	<div class="menu">
 		<div class="filter-label">
-			<!-- ko text: label --><!-- /ko -->
+			test label
 			<span class="icon" data-bind="icon: 'filter'"></span>
 		</div>
 
