--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -72,3 +72,4 @@
 @import "block/block-small-image-left";
 @import "filter-menu";
 @import "block/block-filter-content";
+@import "button/button-circle-close";
