--- a/deploy/htdocs/version/src/inc/style/component/_footer.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_footer.scss
@@ -2,6 +2,7 @@
 	@include size(100%, auto);
 	padding: 0 $sizeGrid * 3;
 	background: $colorPrimary;
+	margin-top: $sizeGrid*2;
 
 	.top-section {
 		@include size(100%, auto);
