--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -73,3 +73,5 @@
 @import "filter-menu";
 @import "block/block-filter-content";
 @import "button/button-circle-close";
+
+@import "block/block-info";
