--- a/deploy/htdocs/version/src/inc/script/app/component/filter-menu/filter-menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/filter-menu/filter-menu.html
@@ -25,9 +25,12 @@
 						}
 					} --><!-- /ko -->
 
-					<span class="select-anchor">
-						<span class="icon abs-center" data-bind="icon: 'arrow-down'"></span>
-					</span>
+					<!-- ko template: {
+						name: 'button-select-anchor',
+						data: {
+							direction: $root.Direction.DOWN
+						}
+					} --><!-- /ko -->
 				</div>
 
 				<div class="filter-dropdown">
