--- a/deploy/htdocs/version/src/inc/style/asset/_form.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_form.scss
@@ -1,3 +1,75 @@
+.input-text {
+	position: relative;
+
+	input {
+		position: relative;
+		display: inline-block;
+		vertical-align: middle;
+		border: none;
+		padding: 0;
+		margin: 0;
+		background-color: transparent;
+		font: 400 1.5rem/1 $fontOpenSans;
+		text-indent: 0;
+		width: 100%;
+		outline: none;
+	}
+
+	&:focus {
+		outline: none;
+	}
+
+	&.invalid { }
+}
+
+.input-text-main {
+	border-bottom: 1px solid rgba(#323232, 0.2);
+	@include size(100%, $sizeGrid);
+	background-color: white;
+
+	.placeholder-label {
+		position: absolute;
+		@include offset(0, 0);
+		transform: translate(0, 0);
+		font: 400 1.5rem / #{$sizeGrid} $fontOpenSans;
+		white-space: nowrap;
+		transition: all 250ms ease(easeOutExpo);
+		pointer-events: none;
+	}
+
+	// Input
+	input {
+		font: 600 1.5rem / #{$sizeGrid} $fontOpenSans;
+
+		// Focus State
+		&:valid,
+		&:focus {
+			+ .placeholder-label {
+				left: 100%;
+				transform: translate(-100%, 0);
+				opacity: 0.5;
+				font-size: 1.3rem;
+			}
+
+			~ .focus-border { // todo grow on text-input-width
+				width: 50%;
+			}
+
+		}
+	}
+
+	.focus-border {
+		@include size(0, 5px);
+		background-color: $colorSecondary;
+		position: absolute;
+		@include pos(auto, auto, -2px, 0);
+		transition: width 250ms ease(easeOutExpo);
+	}
+
+	// Invalid State
+	&.invalid { }
+}
+
 form {
 	padding: 0;
 	margin: 0;
