--- a/deploy/htdocs/version/src/inc/style/component/_header.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_header.scss
@@ -1,6 +1,6 @@
 .component-header {
 	@include pos(0, 0, auto, 50%);
-	@include size(100%, $sizeGrid * 2);
+	@include size(100%, $sizeHeader);
 	position: fixed;
 	transform: translateX(-50%);
 	z-index: zindex($layout, header);
@@ -8,7 +8,7 @@
 	transition: background .2s ease(easeInOut);
 
 	.logo {
-		@include pos(50%, auto, auto, $sizeGrid * 2);
+		@include pos(50%, auto, auto, $sizeHeader);
 		transform: translateY(-50%);
 		position: absolute;
 		cursor: pointer;
