Moved data-images to data/image/.. Add SlideOutPanel Add Contact Form Panel Add InitJson Add Locale Json

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -1,5 +1,5 @@
 <div class="component-block-hero-main">
-	<img src="data/hero-main/slide-1.jpg" alt="" data-bind="">
+	<img src="data/image/hero-main/slide-1.jpg" alt="" data-bind="">
 	<div class="slide-content-wrapper abs-fill">
 		<div class="background-triangle"></div>
 		<div class="secondary-background-triangle"></div>
