--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -54,4 +54,4 @@ $colorLightGrey: #f8f8f8;
 $colorBorder: #e0e0e0;
 
 // Z-indexes
-$layout: content, menu, header, pageLoader;
+$layout: content, menu, header, siteFrame, panelOverlay, panel, pageLoader;
