--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map/block-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map/block-map.html
@@ -2,7 +2,7 @@
 	<div class="aspect-ratio-wrapper overrule-overlap">
 		<div class="aspect-ratio-inner abs-fill">
 			<div class="map-image abs-fill">
-				<img class="abs-fill" src="data/map/map-background.png" alt="">
+				<img class="abs-fill" src="data/image/map/map-background.png" alt="">
 			</div>
 			<div class="map-content">
 				<span class="pagination-number">02</span>
