--- a/deploy/htdocs/version/src/inc/style/asset/_form.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_form.scss
@@ -66,7 +66,13 @@
 	}
 
 	// Invalid State
-	&.invalid { }
+	&.valid,
+	&.invalid {
+		.focus-border {
+			width: 50%;
+			background-color: $colorValidationError;
+		}
+	}
 }
 
 // Input Text Holder
