--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -57,6 +57,7 @@
 @import "block/block-persona-selector";
 @import "button/button-circle-arrow";
 @import "menu";
+@import "scroll-bar";
 @import "block/block-page-not-found";
 @import "block/block-hero-secondary";
 @import "block/block-hero-tertiary";
