Add load more to the filter content block Change the article teaser component to be a block component instead

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
@@ -1,4 +1,4 @@
-<a class="component-latest-article-teaser" href="#">
+<a class="component-block-article-teaser">
 	<figure class="abs-fill">
 		<img data-bind="
 			attr: {
