--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-latest/block-latest.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-latest/block-latest.html
@@ -14,7 +14,7 @@
 		</header>
 		<div class="latest-articles" data-bind="foreach: data.articles">
 			<!-- ko component: {
-				name: 'latest-article-teaser',
+				name: 'block/block-article-teaser',
 				onComplete: $root.controller.callbackCounter.get(),
 				options: $data
 			} --><!-- /ko -->
