--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -52,7 +52,6 @@
 @import "block/block-image-call-to-actions";
 @import "page-loader";
 @import "block/block-latest";
-@import "latest-article-teaser";
 @import "button/button-tag";
 @import "block/block-persona-selector";
 @import "button/button-circle-arrow";
@@ -81,3 +80,4 @@
 @import "slideout-panel";
 
 @import "block/block-network-overview";
+@import "block/block-article-teaser";
