--- a/deploy/htdocs/version/src/inc/style/component/_scroll-bar.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_scroll-bar.scss
@@ -1,6 +1,6 @@
 .component-scroll-bar {
-	@include size(auto, 8px);
-	@include pos(auto, 0, 0, 0);
+	@include size(auto, 2px);
+	@include pos(auto, 0, 4px, 0);
 	background: #e4e5e5;
 	position: absolute;
 
