Refactor small image left to small image Add new block components

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-small-image/block-small-image.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-small-image/block-small-image.html
@@ -1,4 +1,4 @@
-<div class="component-block-small-image-left" data-bind="with: data">
+<div class="component-block-small-image" data-bind="css: alignmentClass, with: data">
 	<img src="" data-bind="image: {
 		queries: [
 			[$root.MediaQueries.X_SMALL, image.small ],
