--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -69,7 +69,6 @@
 @import "block/block-blog-post";
 @import "block/block-quote-secondary";
 @import "block/block-text";
-@import "block/block-small-image-left";
 @import "filter-menu";
 @import "block/block-filter-content";
 @import "button/button-circle-close";
@@ -81,3 +80,7 @@
 
 @import "block/block-network-overview";
 @import "block/block-article-teaser";
+@import "block/block-small-image";
+@import "block/block-story-info-images";
+@import "block/block-program-module";
+@import "program-module-item";
