--- a/deploy/htdocs/version/src/inc/style/component/block/_block-story-info-images.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-story-info-images.scss
@@ -1,3 +1,79 @@
 .component-block-story-info-images {
+	@include aspect-ratio(1440, 760);
 
+	.story-content {
+		@include size(50%, 100%);
+		@include pos(0, auto, 0, 0);
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+
+		.story {
+			@include size(100%, auto);
+			background: $colorWhite;
+			padding: $sizeGrid $sizeGrid * 2;
+			flex-grow: 1;
+			transition: background .2s ease(easeInOut);
+
+			.copy {
+				transition: opacity .2s ease(easeInOut);
+			}
+
+			.heading,
+			.copy {
+				margin-left: $sizeGrid / 2;
+			}
+
+			&.is-active {
+				background: transparent;
+
+				.copy {
+					opacity :0;
+				}
+			}
+		}
+	}
+
+	.story-images {
+		@include size(100%);
+	}
+
+	.image-wrapper {
+		opacity: 0;
+		transition: opacity .2s ease(easeInOut);
+
+		&.is-active {
+			opacity: 1;
+		}
+	}
+
+	.blurred-image,
+	.default-image {
+		@include size(50%, 100%);
+		position: absolute;
+		overflow: hidden;
+
+		img {
+			@include size(200%, 100%);
+			top: 0;
+			position: absolute;
+		}
+	}
+
+	.default-image {
+		@include pos(0, 0, 0, auto);
+
+		img {
+			right: 0;
+		}
+
+	}
+
+	.blurred-image {
+		@include pos(0, auto, 0, 0);
+
+		img {
+			left: 0;
+		}
+	}
 }
