--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -84,3 +84,7 @@
 @import "block/block-story-info-images";
 @import "block/block-program-module";
 @import "program-module-item";
+@import "video-player";
+@import "video-overlay";
+
+@import "button/button-play-circle";
