--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -57,4 +57,4 @@ $colorValidationError: red;
 $colorValidationSuccess: $colorTertiary;
 
 // Z-indexes
-$layout: content, menu, header, siteFrame, panelOverlay, panel, pageLoader;
+$layout: content, menu, header, siteFrame, panelOverlay, panel, popup, pageLoader;
